[package]
name = "rezolus"
version = { workspace = true }
license = { workspace = true }
publish = false
edition = "2021"
description = "High resolution systems performance telemetry agent"

[workspace.package]
version = "3.14.2"
license = "MIT OR Apache-2.0"

[dependencies]
systeminfo = { workspace = true }

backtrace = "0.3.69"
clap = "4.3.24"
humantime = "2.1.0"
lazy_static = "1.4.0"
libc = "0.2.147"
linkme = "0.3.15"
metriken =  "0.6.0"
metriken-exposition = { version = "0.5.0", features = ["serde", "msgpack"] }
memmap2 = "0.5.10"
num_cpus = "1.16.0"
once_cell = "1.18.0"
ouroboros = "0.17.2"
ringlog = "0.6.0"
serde = { version = "1.0.185", features = ["derive"] }
sysconf = "0.3.4"
syscall-numbers = "3.1.0"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
walkdir = "2.3.3"
warp = { version = "0.3.6", features = ["compression"] }
serde_repr = "0.1.18"
histogram = { version = "0.10.0", features = ["serde"] }
chrono = { version = "0.4.33", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
# libbpf-sys version `1.4.0+v1.4.0` fails to compile on Amazon Linux 2 kernel 5.15
# Both x86 and Arm builds fail with the same error and a newer kernel is not available.
# Omitting extraneous output, the error boils down to
#
# In file included from libbpf.c:36:0:
#    /usr/include/linux/bpf_perf_event.h:15:17: error: field 'regs' has incomplete type
#      struct pt_regs regs;
#
# thread 'main' panicked at /root/.cargo/registry/src/index.crates.io-6f17d22bba15001f/libbpf-sys-1.4.0+v1.4.0/build.rs:342:5:
#  make failed
# Hence we pin the versions of libbpf-sys and libbpf-rs
libbpf-rs = { version = "=0.21.2", optional = true }
libbpf-sys = { version = "=1.2.1", optional = true }
perf-event2 = "0.7.0"
nvml-wrapper = "0.9.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = { version = "0.21.2", optional = true }

[features]
all = ["bpf"]
default = ["bpf"]
bpf = ["libbpf-cargo","libbpf-rs","libbpf-sys"]

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
debug = true
lto = true
codegen-units = 1

[workspace]
members = [
    ".",
    "crates/*"
]

[workspace.dependencies]
systeminfo = { path = "crates/systeminfo" }

[package.metadata.generate-rpm]
auto_req = "builtin"
assets = [
    { source = "target/release/rezolus", dest = "/usr/bin/", mode = "755" },
    { source = "config.toml", dest = "/etc/rezolus/", mode = "644" },
    { source = "debian/rezolus.service", dest = "/usr/lib/systemd/system/", mode = "644" },
]
post_install_script = "rpm/systemd-start.sh"
pre_uninstall_script = "rpm/systemd-stop.sh"
